==> espitall/old_eurobot/modules/FreeRTOS/FreeRTOS-Plus-IO/Device/xmega/FreeRTOS_xmega_uart.c <==
#include <xmega/clock/clock.h>
#include <avr/interrupt.h>
#include "FreeRTOS.h"
#include "task.h"
#include "semphr.h"
#include "FreeRTOS_IO.h"
#include "IOUtils_Common.h"
#include "FreeRTOS_uart.h"
#include "xmega_base_board.h"

portBASE_TYPE FreeRTOS_UART_open( Peripheral_Control_t * const pxPeripheralControl )
{
  USART_t * const pxUART = ( USART_t * const ) diGET_PERIPHERAL_BASE_ADDRESS( pxPeripheralControl );
  portBASE_TYPE xReturn;
  const uint8_t cPeripheralNumber = diGET_PERIPHERAL_NUMBER( pxPeripheralControl );
  pxPeripheralControl->read = FreeRTOS_UART_read;
  pxPeripheralControl->write = FreeRTOS_UART_write;
  pxPeripheralControl->ioctl = FreeRTOS_UART_ioctl;

  /* Setup the pins for the UART being used. */
  taskENTER_CRITICAL();
  {
    boardCONFIGURE_UART_PINS( cPeripheralNumber, xPinConfig );

    // async mode, no parity, 1 stop bit, 8 data bits
    pxUART->CTRLC = USART_CMODE_ASYNCHRONOUS_gc | USART_PMODE_DISABLED_gc | USART_CHSIZE_8BIT_gc;

    pxUART->CTRLB = USART_RXEN_bm | USART_TXEN_bm;
  }
  taskEXIT_CRITICAL();

  xReturn = pdPASS;

  return xReturn;
}

size_t FreeRTOS_UART_write( Peripheral_Descriptor_t const pxPeripheral, const void *pvBuffer, const size_t xBytes )
{
  (void)pxPeripheral;
  (void)pvBuffer;
  (void)xBytes;
Peripheral_Control_t * const pxPeripheralControl = ( Peripheral_Control_t * const ) pxPeripheral;
size_t xReturn = 0U;
USART_t * const pxUART = ( USART_t * const ) diGET_PERIPHERAL_BASE_ADDRESS( ( ( Peripheral_Control_t * const ) pxPeripheral ) );
int8_t cPeripheralNumber;

	if( diGET_TX_TRANSFER_STRUCT( pxPeripheralControl ) == NULL )
	{
		#if ioconfigUSE_UART_POLLED_TX == 1
		{
#error "Not implemented"
		}
		#endif /* ioconfigUSE_UART_POLLED_TX */
	}
	else
	{
		/* Remember which transfer control structure is being used.
		The Tx interrupt will use this to continue to write data to the
		Tx FIFO/UART until the length member of the structure reaches
		zero. */
		cPeripheralNumber = diGET_PERIPHERAL_NUMBER( pxPeripheralControl );
		pxTxTransferControlStructs[ cPeripheralNumber  ] = diGET_TX_TRANSFER_STRUCT( pxPeripheralControl );

		switch( diGET_TX_TRANSFER_TYPE( pxPeripheralControl ) )
		{
			case ioctlUSE_ZERO_COPY_TX :

				#if ioconfigUSE_UART_ZERO_COPY_TX == 1
				{
#error "Not implemented"
				}
				#endif /* ioconfigUSE_UART_ZERO_COPY_TX */
				break;


			case ioctlUSE_CHARACTER_QUEUE_TX :

				#if ioconfigUSE_UART_TX_CHAR_QUEUE == 1
				{
					/* The queue allows multiple tasks to attempt to write
					bytes, but ensures only the highest priority of these tasks
					will actually succeed.  If two tasks of equal priority
					attempt to write simultaneously, then the application must
					ensure mutual exclusion, as time slicing could result in
					the strings being sent to the queue being interleaved. */
					ioutilsBLOCKING_SEND_CHARS_TO_TX_QUEUE
						(
							pxPeripheralControl,
							(pxUART->STATUS & USART_DREIF_bm),  /* Peripheral busy condition. */
              {pxUART->DATA = ucChar; pxUART->CTRLA |= (((pxUART->CTRLA & 0x30) >> 4) << USART_DREINTLVL_gp);},/* Peripheral write function. */
							( ( uint8_t * ) pvBuffer ),			/* Data source. */
							xBytes, 							/* Number of bytes to be written. */
							xReturn );
				}
				#endif /* ioconfigUSE_UART_TX_CHAR_QUEUE */
				break;


			default :

				/* Other methods can be implemented here.  For now set the
				stored transfer structure back to NULL as nothing is being
				sent. */
				configASSERT( xReturn );
				pxTxTransferControlStructs[ cPeripheralNumber ] = NULL;

				/* Prevent compiler warnings when the configuration is set such
				that the following parameters are not used. */
				( void ) pvBuffer;
				( void ) xBytes;
				( void ) pxUART;
				break;
		}
	}

	return xReturn;
}

portBASE_TYPE FreeRTOS_UART_ioctl( Peripheral_Descriptor_t pxPeripheral, uint32_t ulRequest, void *pvValue )
{
  Peripheral_Control_t * const pxPeripheralControl = ( Peripheral_Control_t * const ) pxPeripheral;
  uint32_t ulValue = ( uint16_t ) pvValue;
  const int8_t cPeripheralNumber = diGET_PERIPHERAL_NUMBER( ( ( Peripheral_Control_t * const ) pxPeripheral ) );
  USART_t * pxUART = ( USART_t * ) diGET_PERIPHERAL_BASE_ADDRESS( ( ( Peripheral_Control_t * const ) pxPeripheral ) );
  portBASE_TYPE xReturn = pdPASS;

	taskENTER_CRITICAL();
	{
		switch( ulRequest )
		{
			case ioctlUSE_INTERRUPTS :

				if( ulValue == pdFALSE )
				{
          pxUART->CTRLA = 0;
				}
				else
				{
          pxUART->CTRLA = USART_RXCINTLVL_MED_gc;
          PMIC.CTRL |= PMIC_MEDLVLEN_bm;

          pxUART->CTRLB = 0;
          pxUART->CTRLB = USART_RXEN_bm | USART_TXEN_bm;

					/* If the Rx is configured to use interrupts, remember the
					transfer control structure that should be used.  A reference
					to the Tx transfer control structure is taken when a write()
					operation is actually performed. */
					pxRxTransferControlStructs[ cPeripheralNumber ] = pxPeripheralControl->pxRxControl;
				}
				break;


			case ioctlSET_SPEED :
        {
          /* Set up the default UART configuration. */
          uint16_t bsel_value = ((uint32_t)(CLOCK_CPU_FREQ) / (ulValue * 16UL)) - 1;

          pxUART->BAUDCTRLB = (uint8_t)((~USART_BSCALE_gm) & (bsel_value >> 8));
          pxUART->BAUDCTRLA = (uint8_t)(bsel_value);

          pxUART->CTRLB = 0;
          pxUART->CTRLB = USART_RXEN_bm | USART_TXEN_bm;
        }
				break;


			case ioctlSET_INTERRUPT_PRIORITY :

				/* The ISR uses ISR safe FreeRTOS API functions, so the priority
				being set must be lower than (ie numerically larger than)
				configMAX_LIBRARY_INTERRUPT_PRIORITY. */
        if(pxUART->CTRLA != 0)
        {
          pxUART->CTRLA = ((ulValue & 0x03) << USART_RXCINTLVL_gp);
          PMIC.CTRL |= (1 << ((ulValue & 0x03) - 1));
        }
				break;


			default :

				xReturn = pdFAIL;
				break;
		}
	}
	taskEXIT_CRITICAL();

	return xReturn;
}
